--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "scaffold-angular",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --deploy-url /app/",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "tslint": "tslint -p ./tsconfig.json"
   },
   "private": true,
   "dependencies": {
